Calculator commit of displaying numbers
Wrote the logic to make the numbers display

--- a/index.html
+++ b/index.html
@@ -1,11 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Calculator</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="container">
+      <div class="display"></div>
+      <section class="row-1">
+        <button class="normal ac">AC</button>
+        <button class="normal clear">C</button>
+        <button class="normal percentage">%</button>
+        <button class="normal operator divide">/</button>
+      </section>
+      <section class="row-2">
+        <button class="normal number">7</button>
+        <button class="normal number">8</button>
+        <button class="normal number">9</button>
+        <button class="normal operator plus">+</button>
+      </section>
+      <section class="row-3">
+        <button class="normal number">4</button>
+        <button class="normal number">5</button>
+        <button class="normal number">6</button>
+        <button class="normal operator minus">-</button>
+      </section>
+      <section class="row-4">
+        <button class="normal number">1</button>
+        <button class="normal number">2</button>
+        <button class="normal number">3</button>
+        <button class="normal operator multiply">*</button>
+      </section>
+
+      <section class="row-5">
+        <button class="normal number">0</button>
+        <button class="normal dot">.</button>
+        <button class="normal equal">=</button>
+      </section>
+    </div>
+
+    <script src="script.js"></script>
+  </body>
 </html>
