--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="container">
-      <div class="display"></div>
+      <div class="display">0</div>
       <section class="row-1">
         <button class="normal ac">AC</button>
         <button class="normal clear">C</button>
