--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <div class="display">0</div>
       <section class="row-1">
         <button class="normal ac">AC</button>
-        <button class="normal clear">C</button>
+        <!-- <button class="normal clear">C</button> -->
         <button class="normal percentage">%</button>
         <button class="normal operator divide">/</button>
       </section>
@@ -36,7 +36,7 @@
 
       <section class="row-5">
         <button class="normal number">0</button>
-        <button class="normal dot">.</button>
+        <button class="normal number dot">.</button>
         <button class="normal equal">=</button>
       </section>
     </div>
